# crypto-signals

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  PR_DESCRIPTION.md  README.md  REVIEW_REPORT.md  REVIEW_SUMMARY.md  SECURITY.md  assets.txt  docker-compose.yml  mypy_errors.txt  pyproject.toml  setup.sh  test_indicators.py  test_output.txt  test_pattern_bottleneck.py  test_setup.py  test_sqlglot_v2.py  test_sqlglot_v3.py  time_check_patterns.py  time_check_patterns_profile.py  time_pattern.py  time_scan_all_patterns.py  time_test.py
.agent/: agency_blueprint.md
.agent/jules/: protocol.md
.agent/rules/: architecture.md  coding-standards.md  conventional-commits.md  data-integrity.md  numba-jit.md  pytest-guide.md  testing-tdd.md  workspace-preferences.md
.agent/workflows/: architect.md  cleanup.md  cleanup_branch.md  design.md  diagnose.md  diagnose_logs.md  fix.md  implement.md  issue.md  kickoff.md  learn.md  migrate.md  perf.md  plan.md  pr.md  preflight.md  proto-sync.md  review.md  review_jules.md  sync.md  sync_docs.md  tdd.md  verify.md
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yml  gemini-reviewer-context.md
.github/instructions/: tests.instructions.md
.github/workflows/: deploy.yml
agent_temp/: diff.txt
artifacts/: CI_CD_FIXES_SUMMARY.md  CODE_REVIEW_REPORT.md  IMPLEMENTATION_PLAN.md  ISSUE_117_IMPLEMENTATION_WALKTHROUGH.md  PR_WORKFLOW_COMPLETION.md  REVIEW_SUGGESTIONS_APPLIED.md  VERIFICATION_REPORT.md
docs/: DATA_ARCHITECTURE.md  GCP_DEPLOYMENT_GUIDE.md  GCP_DEPLOYMENT_GUIDE_V1.md  INFRASTRUCTURE_HEALTH_CHECK.md  KNOWLEDGE_BASE.md  PATTERN_REFERENCE.md  PRE_PUSH_HOOK.md  PRODUCTION_MONITORING.md  PULL_PRS_USAGE.md  README.md  TROUBLESHOOTING.md  WORKFLOW_GUIDE.md  discord-threading.md  position-management.md  setup_guide.md
docs/architecture/: current-schema.dbml  data-architecture.md
docs/archive/: GCP_DEPLOYMENT_GUIDE_V1.md  README.md
docs/data/: 00_data_catalog.md  00_data_handbook.md  01_strategy.md  02_pipelines.md  03_schema.md  04_pipeline_architecture.md
docs/designs/: adr_bq_nested_types.md  adr_fact_theoretical_signals_bq_types.md  analytics_gap_analysis.md  lean_architecture_vision.md  signal_lifecycle_architecture.md
docs/development/: flywheel.md  knowledge-base.md  lessons_learned.md  pre-push-hook.md  scripts-organization.md  workflow-guide.md
docs/gcp-alerts/: execution-time-alert.yaml  job-failure-alert.yaml  memory-usage-alert.yaml
docs/operations/: deployment-guide.md  iam_roles.md  infrastructure-health.md  monitoring.md  troubleshooting.md
docs/planning/: data-flow-master-plan.md  roadmap.md
docs/reviews/: ISSUE_117_REVIEW_RESPONSE.md  summary-2026-01-14.md
docs/strategy/: pattern-reference.md  position-management.md  signal-cooldown.md
reviews/: REVIEW_SUMMARY_20251219.md  REVIEW_SUMMARY_20251225.md
scripts/: analyze_firestore_schema.py  configure_bq_ttl.sh  deploy_bq_views.py  generate_pattern_images.py  get_pr_comments.sh  inspect_firestore_signals.py  jules-setup.sh  manage_worktree.py  migrate_bq_descriptions.py  post_review.py  preflight.sh  purge_test_signals.py  run_migration.py  schema_migration.sql  setup_gcp.sh  setup_supabase_storage.py  supabase_schema.sql  validate_assets.py  verify_account_pipeline.py  verify_doc_parity.py  verify_firestore_config.py  verify_hardening.py  visual_discord_test.py
scripts/bq/: migration_add_pattern_name_to_dim_strategies.sql  mv_agg_strategy_daily.sql  vw_fact_trades.sql  vw_summary_strategy_performance.sql
scripts/diagnostics/: inspect_alpaca_sdk.py
scripts/github/: batch_get_issues.sh  get_issue_details.sh  get_pr_comments.sh  parse_issues.py  parse_pr_comments.py
scripts/jules/: batch_get_issues.sh  get_issue_details.sh  get_pr_comments.sh  parse_issue_for_jules.py  parse_pr_comments.py
scripts/profiling/: profile_harmonics.py  profile_indicators.py  profile_patterns.py
src/: config.py  schemas.py
src/crypto_signals/: __init__.py  config.py  main.py  observability.py  secrets_manager.py
src/pipelines/: __init__.py  base.py  trade_archival.py
src/scripts/: health_check.py
tests/: assertion_helpers.py  conftest.py  factories.py  test_config.py  test_config_equities.py  test_discord_thread_name.py  test_main.py  test_main_metrics.py  test_metadata.py  test_mock_notifications.py  test_notifications.py  test_observability.py  test_pipeline_trades.py  test_pipelines_base.py  test_schemas.py  test_trade_archival_orchestration.py  test_trade_archival_theoretical.py
tests/analysis/: test_harmonics.py  test_indicators.py  test_patterns.py  test_structural.py  test_structural_coverage.py
tests/domain/: test_confluence_config.py  test_schemas.py  test_schemas_issue_253.py
tests/engine/: test_cache.py  test_diversity_metrics.py  test_execution.py  test_execution_account_id.py  test_execution_gating.py  test_execution_risk_integration.py  test_execution_sync.py  test_exit_price_capture.py  test_micro_cap_safeguards.py  test_parameters.py  test_pr_gaps.py  test_reconciler.py  test_reconciler_issue_244.py  test_reconciler_logic.py  test_reconciler_theoretical.py  test_risk.py  test_risk_correlation.py  test_risk_correlation_batch.py  test_risk_metrics.py  test_schema_guardian.py  test_signal_generator.py  test_signal_generator_micro_cap.py  test_signal_generator_validation.py  test_strategic_feedback_cooldown.py  test_theoretical_execution.py  test_tp_automation_race.py  test_tp_race_condition_event.py
tests/integration/: test_discord_integration.py  test_exit_price_integration.py  test_paper_trading.py
tests/market/: test_asset_service.py  test_cache.py  test_data_provider.py  test_data_provider_batching.py  test_data_provider_caching.py
tests/notifications/: test_discord_risk.py
tests/pipelines/: conftest.py  test_account_snapshot.py  test_agg_strategy_daily.py  test_archival_datetime_logic.py  test_archival_pagination.py  test_archival_sdk_compatibility.py  test_backtest_archival.py  test_expired_signal_archival.py  (+12 more)
(+102 files in other folders)
